--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -8,30 +8,34 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>todo list manger</title>
+    {% block title %}
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Task Mate</a>
+    {% endblock title %}
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">
+          <img src="{% static 'images/car-logo10.png' %}" width="300px" height="50px" alt="Task mate">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/">Home</a>
-            <a class="nav-item nav-link" href="/todolist">Todo List</a>
-            <a class="nav-item nav-link" href="/contact">Contact Us</a>
-            <a class="nav-item nav-link" href="/about">About Us</a>
+            <a class="nav-item nav-link" href="{% url 'todolist' %}">Home</a>
+            <a class="nav-item nav-link" href="{% url 'todolist' %}">Todo List</a>
+            <a class="nav-item nav-link" href="{% url 'contact' %}">Contact Us</a>
+            <a class="nav-item nav-link" href="{% url 'about' %}">About Us</a>
           </div>
         </div>
-  </nav>
-  </head>
-  <body>
-  <div class="container">
-    <h1>{{ Welcome_text }}</h1>
-  </div>
+    </nav>
+    {% block content %}
+
+    {% endblock content  %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+
   </body>
 </html>
