--- a/todolist_app/templates/contact.html
+++ b/todolist_app/templates/contact.html
@@ -1,1 +1,11 @@
 {% extends 'base.html' %}
+
+{% block title %}
+  <title>Contact - manager</title>
+{% endblock title %}
+
+{% block content %}
+  <div class="container">
+    <h1>{{contact_text}}</h1>
+  </div>
+{% endblock content %}
