--- a/todolist_app/templates/todolist.html
+++ b/todolist_app/templates/todolist.html
@@ -1,1 +1,40 @@
 {% extends 'base.html' %}
+
+{% block title %}
+  <title>todolist - manager</title>
+{% endblock title %}
+
+{% block content %}
+  <div class="container">
+  </br>
+      <table class="table table-bordered">
+          <thead class="thead-dark">
+              <tr>
+                  <th scope="col">Task</th>
+                  <th scope="col">Done</th>
+                  <th scope="col">Edit</th>
+                  <th scope="col">Delete</th>
+              </tr>
+          </thead>
+          <tbody>
+          {% for obj in all_tasks %}
+              {% if obj.done %}
+              <tr class="table-success">
+                  <td scope="row">{{obj.task}}</td>
+                  <td>Completed</td>
+                  <td>Edit</td>
+                  <td>Delete</td>
+              </tr>
+              {% else %}
+              <tr>
+                  <td scope="row">{{obj.task}}</td>
+                  <td>Not Completed</td>
+                  <td>Edit</td>
+                  <td>Delete</td>
+              </tr>
+              {% endif %}
+          {% endfor %}
+          </tbody>
+      </table>
+  </div>
+{% endblock content %}
