--- a/todolist_app/templates/todolist.html
+++ b/todolist_app/templates/todolist.html
@@ -6,7 +6,24 @@
 
 {% block content %}
   <div class="container">
-  </br>
+      </br>
+      {% if messages %}
+          {% for message in messages %}
+            <div class="alert alert-info alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+          {% endfor %}
+      {% endif %}
+      <form method="POST" class="row">
+          {% csrf_token %}
+          <label class="col-lg-4"></label>
+          <input type="text" class="form-control col-lg-6" name="task" placeholder="New Task?">
+          <button type="submit" class="btn btn-primary col-lg-2">Add Task</button>
+      </form>
+      <br>
       <table class="table table-bordered">
           <thead class="thead-dark">
               <tr>
@@ -17,23 +34,25 @@
               </tr>
           </thead>
           <tbody>
-          {% for obj in all_tasks %}
-              {% if obj.done %}
-              <tr class="table-success">
-                  <td scope="row">{{obj.task}}</td>
-                  <td>Completed</td>
-                  <td>Edit</td>
-                  <td>Delete</td>
-              </tr>
-              {% else %}
-              <tr>
-                  <td scope="row">{{obj.task}}</td>
-                  <td>Not Completed</td>
-                  <td>Edit</td>
-                  <td>Delete</td>
-              </tr>
-              {% endif %}
-          {% endfor %}
+          {% if all_tasks %}
+              {% for obj in all_tasks %}
+                  {% if obj.done %}
+                  <tr class="table-success">
+                      <td scope="row">{{obj.task}}</td>
+                      <td>Completed</td>
+                      <td>Edit</td>
+                      <td>Delete</td>
+                  </tr>
+                  {% else %}
+                  <tr>
+                      <td scope="row">{{obj.task}}</td>
+                      <td>Not Completed</td>
+                      <td>Edit</td>
+                      <td>Delete</td>
+                  </tr>
+                  {% endif %}
+              {% endfor %}
+          {% endif %}
           </tbody>
       </table>
   </div>
