--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,9 @@
 
     {% endblock title %}
   </head>
-  <body>
+  <body class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'index' %}">
           <img src="{% static 'images/car-logo10.png' %}" width="300px" height="50px" alt="Task mate">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="{% url 'todolist' %}">Home</a>
+            <a class="nav-item nav-link" href="{% url 'index' %}">Home</a>
             <a class="nav-item nav-link" href="{% url 'todolist' %}">Todo List</a>
             <a class="nav-item nav-link" href="{% url 'contact' %}">Contact Us</a>
             <a class="nav-item nav-link" href="{% url 'about' %}">About Us</a>
