--- a/todolist_app/templates/todolist.html
+++ b/todolist_app/templates/todolist.html
@@ -24,36 +24,51 @@
           <button type="submit" class="btn btn-primary col-lg-2">Add Task</button>
       </form>
       <br>
-      <table class="table table-bordered">
+      <table class="table table-bordered text-center">
           <thead class="thead-dark">
-              <tr>
-                  <th scope="col">Task</th>
-                  <th scope="col">Done</th>
-                  <th scope="col">Edit</th>
-                  <th scope="col">Delete</th>
+              <tr class="row">
+                  <th class="col-7">Task</th>
+                  <th class="col-3">Done</th>
+                  <th class="col-1">Edit</th>
+                  <th class="col-1">Delete</th>
               </tr>
           </thead>
           <tbody>
           {% if all_tasks %}
               {% for obj in all_tasks %}
                   {% if obj.done %}
-                  <tr class="table-success">
-                      <td scope="row">{{obj.task}}</td>
-                      <td>Completed</td>
-                      <td>Edit</td>
-                      <td>Delete</td>
+                  <tr class="table-success row">
+                      <td class="col-7">{{obj.id}} | {{obj.task}}</td>
+                      <td class="col-3"><a href="{% url 'pending_task' obj.id %}"><button type="button" class="btn btn-dark">Mark this Pending</button></a></td>
+                      <td class="col-1"><a href="{% url 'edit_task' obj.id %}"><button type="button" class="btn btn-warning">Edit</button></a></td>
+                      <td class="col-1"><a href="{% url 'delete_task' obj.id %}"><button type="button" class="btn btn-danger">delete</button></a></td>
                   </tr>
                   {% else %}
-                  <tr>
-                      <td scope="row">{{obj.task}}</td>
-                      <td>Not Completed</td>
-                      <td>Edit</td>
-                      <td>Delete</td>
+                  <tr class="row">
+                      <td class="col-7">{{obj.id}} | {{obj.task}}</td>
+                      <td class="col-3"><a href="{% url 'complate_task' obj.id %}"><button type="button" class="btn btn-dark">Mark This Complated</button></a></td>
+                      <td class="col-1"><a href="{% url 'edit_task' obj.id %}"><button type="button" class="btn btn-warning">Edit</button></a></td>
+                      <td class="col-1"><a href="{% url 'delete_task' obj.id %}"><button type="button" class="btn btn-danger">delete</button></a></td>
                   </tr>
                   {% endif %}
               {% endfor %}
           {% endif %}
           </tbody>
       </table>
+
+      <nav aria-label="Page navigation example">
+          <ul class="pagination justify-content-end">
+            <li class="page-item"><a class="page-link" href="?pg=1"><<</a></li>
+            {% if all_tasks.has_previous %}
+            <li class="page-item"><a class="page-link" href="?pg={{ all_tasks.previous_page_number }}">{{ all_tasks.previous_page_number }}</a></li>
+            {% endif %}
+            <li class="page-item"><a class="page-link" href="?pg={{ all_tasks.number }}">{{ all_tasks.number }}</a></li>
+
+            {% if all_tasks.has_next %}
+            <li class="page-item"><a class="page-link" href="?pg={{ all_tasks.next_page_number }}">{{ all_tasks.next_page_number }}</a></li>
+            {% endif %}
+            <li class="page-item"><a class="page-link" href="?pg={{ all_tasks.paginator.num_pages }}">>></a></li>
+          </ul>
+      </nav>
   </div>
 {% endblock content %}
