--- a/users_app/templates/login.html
+++ b/users_app/templates/login.html
@@ -2,13 +2,13 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-  <title>Register - manager</title>
+  <title>Login - manager</title>
 {% endblock title %}
 
 {% block content %}
   <div class="container">
       </br>
-      <h2>Register On Taskmate</h2>
+      <h2>Login On Taskmate</h2>
       {% if messages %}
           {% for message in messages %}
             <div class="alert alert-info alert-dismissible fade show" role="alert">
@@ -22,8 +22,8 @@
       <form method="POST" class="mt-5 col-6">
         {% csrf_token %}
           <!--{{ register_form.as_p }}-->
-          {{ register_form | crispy }}
-          <button class="btn btn-primary mb-5" type="submit">Register</button>
+          {{ form | crispy }}
+          <button class="btn btn-primary mb-5" type="submit">Login</button>
       </form>
   </div>
 {% endblock content %}
