--- a/todolist_app/templates/todolist.html
+++ b/todolist_app/templates/todolist.html
@@ -38,7 +38,7 @@
               {% for obj in all_tasks %}
                   {% if obj.done %}
                   <tr class="table-success row">
-                      <td class="col-7">{{obj.id}} | {{obj.task}}</td>
+                      <td class="col-7"><del>{{obj.id}} | {{obj.task}}</del></td>
                       <td class="col-3"><a href="{% url 'pending_task' obj.id %}"><button type="button" class="btn btn-dark">Mark this Pending</button></a></td>
                       <td class="col-1"><a href="{% url 'edit_task' obj.id %}"><button type="button" class="btn btn-warning">Edit</button></a></td>
                       <td class="col-1"><a href="{% url 'delete_task' obj.id %}"><button type="button" class="btn btn-danger">delete</button></a></td>
