--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,24 @@
             <a class="nav-item nav-link" href="{% url 'about' %}">About Us</a>
           </div>
         </div>
+
+        {% if user.is_authenticated %}
+            <div class="form-inline my-2 my-lg-0">
+                <div class="p-2 bg-dark text-white">
+                  Logged in as {{ user.username }}
+                </div>
+                <a href="{% url 'logout' %}">
+                    <button class="btn btn-info my-2 my-sm-0" type="submit">Logout</button>
+                </a>
+            </div>
+        {% else %}
+            <a href="{% url 'login' %}">
+                <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+            </a>
+            <a href="{% url 'register' %}">
+                <button class="btn btn-primary my-2 my-sm-0" type="submit">Register</button>
+            </a>
+        {% endif %}
     </nav>
     {% block content %}
 
