--- a/todolist_app/templates/edit.html
+++ b/todolist_app/templates/edit.html
@@ -7,6 +7,7 @@
 {% block content %}
   <div class="container">
       <br>
+      {% if task %}
       <form method="POST" class="row">
           {% csrf_token %}
           <label class="col-lg-4"></label>
