--- a/templates/base.html
+++ b/templates/base.html
@@ -13,40 +13,32 @@
     {% endblock title %}
   </head>
   <body class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'index' %}">
-          <img src="{% static 'images/car-logo10.png' %}" width="300px" height="50px" alt="Task mate">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="{% url 'index' %}">Home</a>
-            <a class="nav-item nav-link" href="{% url 'todolist' %}">Todo List</a>
-            <a class="nav-item nav-link" href="{% url 'contact' %}">Contact Us</a>
-            <a class="nav-item nav-link" href="{% url 'about' %}">About Us</a>
-          </div>
-        </div>
 
-        {% if user.is_authenticated %}
-            <div class="form-inline my-2 my-lg-0">
-                <div class="p-2 bg-dark text-white">
-                  Logged in as {{ user.username }}
-                </div>
-                <a href="{% url 'logout' %}">
-                    <button class="btn btn-info my-2 my-sm-0" type="submit">Logout</button>
-                </a>
-            </div>
-        {% else %}
-            <a href="{% url 'login' %}">
-                <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
-            </a>
-            <a href="{% url 'register' %}">
-                <button class="btn btn-primary my-2 my-sm-0" type="submit">Register</button>
-            </a>
-        {% endif %}
-    </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <img src="{% static 'images/task1.png' %}" width="40px" height="40px" alt="Task mate">
+          <a class="navbar-brand" href="{% url 'index' %}"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                  <a class="nav-item nav-link" href="{% url 'index' %}">Home</a>
+                  <a class="nav-item nav-link" href="{% url 'todolist' %}">Todo List</a>
+                  <a class="nav-item nav-link" href="{% url 'contact' %}">Contact Us</a>
+                  <a class="nav-item nav-link" href="{% url 'about' %}">About Us</a>
+              </div>
+          </div>
+
+          {% if user.is_authenticated %}
+              <div class="p-2 bg-dark text-white"> Logged in as {{ user.username }} </div>
+              <a href="{% url 'logout' %}" class="col-1"><button class="btn btn-info btn-sm" type="submit">Logout</button></a>
+          {% else %}
+          <div class="form-inline">
+              <a href="{% url 'login' %}"><button class="btn btn-success my-2 my-sm-0" type="submit">Login</button></a>
+              <a href="{% url 'register' %}"><button class="btn btn-primary my-2 my-sm-0" type="submit">Register</button></a>
+          </div>
+            {% endif %}
+      </nav>
     {% block content %}
 
     {% endblock content  %}
