--- a/todolist_app/templates/edit.html
+++ b/todolist_app/templates/edit.html
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="container">
       <br>
-      {% if task %}
+      {% if task_obj.manage == request.user %}
       <form method="POST" class="row">
           {% csrf_token %}
           <label class="col-lg-4"></label>
@@ -16,5 +16,8 @@
           <hr>
           <button type="submit" class="btn btn-primary col-lg-2">Update Task</button>
       </form>
+      {% else %}
+        <p>Access Restricted, You Are Not Allowed!</p>
+      {% endif %}
   </div>
 {% endblock content %}
