--- a/todolist_app/templates/todolist.html
+++ b/todolist_app/templates/todolist.html
@@ -17,10 +17,10 @@
             </div>
           {% endfor %}
       {% endif %}
-      <form method="POST" class="row">
+      <form method="POST" class="form-inline">
           {% csrf_token %}
           <label class="col-lg-4"></label>
-          <input type="text" class="form-control col-lg-6" name="task" placeholder="New Task?">
+          <input type="text" class="form-control col-lg-2" placeholder="New Task?" name="task">
           <button type="submit" class="btn btn-primary col-lg-2">Add Task</button>
       </form>
       <br>
@@ -38,14 +38,14 @@
               {% for obj in all_tasks %}
                   {% if obj.done %}
                   <tr class="table-success row">
-                      <td class="col-7"><del>{{obj.id}} | {{obj.task}}</del></td>
+                      <td class="col-7"><del><!--{{obj.id}} | -->  {{obj.task}}</del></td>
                       <td class="col-3"><a href="{% url 'pending_task' obj.id %}"><button type="button" class="btn btn-dark">Mark this Pending</button></a></td>
                       <td class="col-1"><a href="{% url 'edit_task' obj.id %}"><button type="button" class="btn btn-warning">Edit</button></a></td>
                       <td class="col-1"><a href="{% url 'delete_task' obj.id %}"><button type="button" class="btn btn-danger">delete</button></a></td>
                   </tr>
                   {% else %}
                   <tr class="row">
-                      <td class="col-7">{{obj.id}} | {{obj.task}}</td>
+                      <td class="col-7"> <!-- {{obj.id}} | -->  {{obj.task}}</td>
                       <td class="col-3"><a href="{% url 'complate_task' obj.id %}"><button type="button" class="btn btn-dark">Mark This Complated</button></a></td>
                       <td class="col-1"><a href="{% url 'edit_task' obj.id %}"><button type="button" class="btn btn-warning">Edit</button></a></td>
                       <td class="col-1"><a href="{% url 'delete_task' obj.id %}"><button type="button" class="btn btn-danger">delete</button></a></td>
